--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "比你优秀的人还在努力，你有什么资格不去奋斗。"
 ---
 
 {% for post in paginator.posts %}
