--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "关于我"
-description: "Hey!"
+description: ""
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -15,7 +15,7 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>世上本没有路，走的人多了也就成了路<br>
+    <blockquote><p>
     事在人为，休言万般都是命<br>
     境由心造，退后一步自然宽</p></blockquote>
 
@@ -26,15 +26,7 @@ header-img: "img/post-bg-rwd.jpg"
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/clyz-mm">👉GitHub</a> 如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
-    
-    <h5>Talks</h5>
 
-    <ul>
-        <li><a href="https://github.com">GitHub</a></li>
-        <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
-        <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
-    </ul>
 </div>
 
 <!-- English Version -->
@@ -47,16 +39,7 @@ header-img: "img/post-bg-rwd.jpg"
     <p>Like to toss about new things, but also like ball games.</p>
 
     <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/clyz-mm">Github</a>.</p>
-    
-
-    <h5>Talks</h5>
-
-    <ul>
-    <li><a href="https://github.com">GitHub</a></li>
-    <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-    <li><a href="https://pages.github.com/">GitHub Pages</a></li>
-    <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
-    </ul>
+   
 </div> -->
 
 <!-- Handle Language Change -->
