--- a/about.html
+++ b/about.html
@@ -61,12 +61,13 @@ header-img: "img/post-bg-rwd.jpg"
             $en.style.display = "block";
             $zh.style.display = "none";
         // zh by default
-        }else{
+        }
+        /*else{
             // not trigger onChange, otherwise cause a loop call.
             $select.selectedIndex = 0;
             $zh.style.display = "block";
             $en.style.display = "none";
-        }
+        }*/
     }
 
     // handle select change
